parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    DOT

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statements statement
Rule 2     statements -> statement
Rule 3     statement -> assignement
Rule 4     statement -> print
Rule 5     assignement -> NAME EQUALS expression_string SEMICOLON
Rule 6     assignement -> NAME INCREMENT SEMICOLON
Rule 7     assignement -> NAME DECREMENT SEMICOLON
Rule 8     expression_string -> expression
Rule 9     expression_string -> STRING
Rule 10    expression_string -> boolean
Rule 11    print -> PRINT L_PARENTHESIS expression_string R_PARENTHESIS SEMICOLON
Rule 12    expression -> L_PARENTHESIS expression R_PARENTHESIS
Rule 13    expression -> expression PLUS expression
Rule 14    expression -> expression MINUS expression
Rule 15    expression -> expression TIMES expression
Rule 16    expression -> expression DIVIDE expression
Rule 17    expression -> expression MODULO expression
Rule 18    expression -> term
Rule 19    term -> factor
Rule 20    term -> NAME
Rule 21    factor -> NUMBER
Rule 22    uminus -> MINUS NUMBER
Rule 23    factor -> uminus
Rule 24    assignement -> array
Rule 25    array -> NAME EQUALS L_BRACKET R_BRACKET SEMICOLON
Rule 26    array -> NAME EQUALS array_content SEMICOLON
Rule 27    array_content -> L_BRACKET elements R_BRACKET
Rule 28    elements -> element COMMA elements
Rule 29    elements -> element
Rule 30    element -> expression_string
Rule 31    element -> array_content
Rule 32    array_index -> L_BRACKET expression R_BRACKET
Rule 33    expression_string -> NAME array_index
Rule 34    expression_string -> NAME array_index array_index
Rule 35    assignement -> change_element_array
Rule 36    change_element_array -> NAME array_index EQUALS element SEMICOLON
Rule 37    change_element_array -> NAME array_index array_index EQUALS element SEMICOLON
Rule 38    boolean -> TRUE
Rule 39    boolean -> FALSE
Rule 40    booleans -> booleans AND boolean
Rule 41    booleans -> booleans OR boolean
Rule 42    booleans -> boolean
Rule 43    booleans -> L_PARENTHESIS booleans R_PARENTHESIS
Rule 44    boolean -> expression_string EQUAL expression_string
Rule 45    boolean -> expression_string NOT_EQUAL expression_string
Rule 46    boolean -> expression_string GREATER expression_string
Rule 47    boolean -> expression_string LESS expression_string
Rule 48    boolean -> expression_string GREATER_EQUAL expression_string
Rule 49    boolean -> expression_string LESS_EQUAL expression_string
Rule 50    else -> ELSE L_BRACE statements R_BRACE
Rule 51    elif -> ELIF L_PARENTHESIS booleans R_PARENTHESIS L_BRACE statements R_BRACE
Rule 52    elifs -> elifs elif
Rule 53    elifs -> elif
Rule 54    if -> IF L_PARENTHESIS booleans R_PARENTHESIS L_BRACE statements R_BRACE
Rule 55    statement -> if
Rule 56    statement -> if elifs
Rule 57    statement -> if elifs else
Rule 58    statement -> if else
Rule 59    statement -> loop_while
Rule 60    loop_while -> WHILE booleans L_BRACE statements R_BRACE
Rule 61    statement -> FOR L_PARENTHESIS NAME EQUALS expression TO expression COMMA STEP EQUALS expression R_PARENTHESIS L_BRACE statements R_BRACE
Rule 62    statement -> FOR L_PARENTHESIS NAME EQUALS expression TO expression R_PARENTHESIS L_BRACE statements R_BRACE
Rule 63    argument_list -> expression
Rule 64    argument_list -> argument_list COMMA expression
Rule 65    parameter -> NAME
Rule 66    parameter_list -> parameter
Rule 67    parameter_list -> parameter_list COMMA parameter
Rule 68    statement -> FUNCTION NAME L_BRACE statements R_BRACE
Rule 69    statement -> FUNCTION NAME L_BRACE statements return R_BRACE
Rule 70    statement -> FUNCTION NAME LESS parameter_list GREATER L_BRACE statements R_BRACE
Rule 71    statement -> FUNCTION NAME LESS parameter_list GREATER L_BRACE statements return R_BRACE
Rule 72    statement -> NAME L_PARENTHESIS argument_list R_PARENTHESIS SEMICOLON
Rule 73    statement -> NAME L_PARENTHESIS R_PARENTHESIS SEMICOLON
Rule 74    return -> RETURN L_PARENTHESIS expression R_PARENTHESIS SEMICOLON

Terminals, with rules where they appear

AND                  : 40
COMMA                : 28 61 64 67
COMMENT              : 
DECREMENT            : 7
DIVIDE               : 16
DOT                  : 
ELIF                 : 51
ELSE                 : 50
EQUAL                : 44
EQUALS               : 5 25 26 36 37 61 61 62
FALSE                : 39
FOR                  : 61 62
FUNCTION             : 68 69 70 71
GREATER              : 46 70 71
GREATER_EQUAL        : 48
IF                   : 54
INCREMENT            : 6
LESS                 : 47 70 71
LESS_EQUAL           : 49
L_BRACE              : 50 51 54 60 61 62 68 69 70 71
L_BRACKET            : 25 27 32
L_PARENTHESIS        : 11 12 43 51 54 61 62 72 73 74
MINUS                : 14 22
MODULO               : 17
NAME                 : 5 6 7 20 25 26 33 34 36 37 61 62 65 68 69 70 71 72 73
NOT_EQUAL            : 45
NUMBER               : 21 22
OR                   : 41
PLUS                 : 13
PRINT                : 11
RETURN               : 74
R_BRACE              : 50 51 54 60 61 62 68 69 70 71
R_BRACKET            : 25 27 32
R_PARENTHESIS        : 11 12 43 51 54 61 62 72 73 74
SEMICOLON            : 5 6 7 11 25 26 36 37 72 73 74
STEP                 : 61
STRING               : 9
TIMES                : 15
TO                   : 61 62
TRUE                 : 38
WHILE                : 60
error                : 

Nonterminals, with rules where they appear

argument_list        : 64 72
array                : 24
array_content        : 26 31
array_index          : 33 34 34 36 37 37
assignement          : 3
boolean              : 10 40 41 42
booleans             : 40 41 43 51 54 60
change_element_array : 35
element              : 28 29 36 37
elements             : 27 28
elif                 : 52 53
elifs                : 52 56 57
else                 : 57 58
expression           : 8 12 13 13 14 14 15 15 16 16 17 17 32 61 61 61 62 62 63 64 74
expression_string    : 5 11 30 44 44 45 45 46 46 47 47 48 48 49 49
factor               : 19
if                   : 55 56 57 58
loop_while           : 59
parameter            : 66 67
parameter_list       : 67 70 71
print                : 4
return               : 69 71
statement            : 1 2
statements           : 1 50 51 54 60 61 62 68 69 70 71 0
term                 : 18
uminus               : 23

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statements statement
    (2) statements -> . statement
    (3) statement -> . assignement
    (4) statement -> . print
    (55) statement -> . if
    (56) statement -> . if elifs
    (57) statement -> . if elifs else
    (58) statement -> . if else
    (59) statement -> . loop_while
    (61) statement -> . FOR L_PARENTHESIS NAME EQUALS expression TO expression COMMA STEP EQUALS expression R_PARENTHESIS L_BRACE statements R_BRACE
    (62) statement -> . FOR L_PARENTHESIS NAME EQUALS expression TO expression R_PARENTHESIS L_BRACE statements R_BRACE
    (68) statement -> . FUNCTION NAME L_BRACE statements R_BRACE
    (69) statement -> . FUNCTION NAME L_BRACE statements return R_BRACE
    (70) statement -> . FUNCTION NAME LESS parameter_list GREATER L_BRACE statements R_BRACE
    (71) statement -> . FUNCTION NAME LESS parameter_list GREATER L_BRACE statements return R_BRACE
    (72) statement -> . NAME L_PARENTHESIS argument_list R_PARENTHESIS SEMICOLON
    (73) statement -> . NAME L_PARENTHESIS R_PARENTHESIS SEMICOLON
    (5) assignement -> . NAME EQUALS expression_string SEMICOLON
    (6) assignement -> . NAME INCREMENT SEMICOLON
    (7) assignement -> . NAME DECREMENT SEMICOLON
    (24) assignement -> . array
    (35) assignement -> . change_element_array
    (11) print -> . PRINT L_PARENTHESIS expression_string R_PARENTHESIS SEMICOLON
    (54) if -> . IF L_PARENTHESIS booleans R_PARENTHESIS L_BRACE statements R_BRACE
    (60) loop_while -> . WHILE booleans L_BRACE statements R_BRACE
    (25) array -> . NAME EQUALS L_BRACKET R_BRACKET SEMICOLON
    (26) array -> . NAME EQUALS array_content SEMICOLON
    (36) change_element_array -> . NAME array_index EQUALS element SEMICOLON
    (37) change_element_array -> . NAME array_index array_index EQUALS element SEMICOLON

    FOR             shift and go to state 7
    FUNCTION        shift and go to state 9
    NAME            shift and go to state 8
    PRINT           shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    assignement                    shift and go to state 3
    print                          shift and go to state 4
    if                             shift and go to state 5
    loop_while                     shift and go to state 6
    array                          shift and go to state 10
    change_element_array           shift and go to state 11

state 1

    (0) S' -> statements .
    (1) statements -> statements . statement
    (3) statement -> . assignement
    (4) statement -> . print
    (55) statement -> . if
    (56) statement -> . if elifs
    (57) statement -> . if elifs else
    (58) statement -> . if else
    (59) statement -> . loop_while
    (61) statement -> . FOR L_PARENTHESIS NAME EQUALS expression TO expression COMMA STEP EQUALS expression R_PARENTHESIS L_BRACE statements R_BRACE
    (62) statement -> . FOR L_PARENTHESIS NAME EQUALS expression TO expression R_PARENTHESIS L_BRACE statements R_BRACE
    (68) statement -> . FUNCTION NAME L_BRACE statements R_BRACE
    (69) statement -> . FUNCTION NAME L_BRACE statements return R_BRACE
    (70) statement -> . FUNCTION NAME LESS parameter_list GREATER L_BRACE statements R_BRACE
    (71) statement -> . FUNCTION NAME LESS parameter_list GREATER L_BRACE statements return R_BRACE
    (72) statement -> . NAME L_PARENTHESIS argument_list R_PARENTHESIS SEMICOLON
    (73) statement -> . NAME L_PARENTHESIS R_PARENTHESIS SEMICOLON
    (5) assignement -> . NAME EQUALS expression_string SEMICOLON
    (6) assignement -> . NAME INCREMENT SEMICOLON
    (7) assignement -> . NAME DECREMENT SEMICOLON
    (24) assignement -> . array
    (35) assignement -> . change_element_array
    (11) print -> . PRINT L_PARENTHESIS expression_string R_PARENTHESIS SEMICOLON
    (54) if -> . IF L_PARENTHESIS booleans R_PARENTHESIS L_BRACE statements R_BRACE
    (60) loop_while -> . WHILE booleans L_BRACE statements R_BRACE
    (25) array -> . NAME EQUALS L_BRACKET R_BRACKET SEMICOLON
    (26) array -> . NAME EQUALS array_content SEMICOLON
    (36) change_element_array -> . NAME array_index EQUALS element SEMICOLON
    (37) change_element_array -> . NAME array_index array_index EQUALS element SEMICOLON

    FOR             shift and go to state 7
    FUNCTION        shift and go to state 9
    NAME            shift and go to state 8
    PRINT           shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14

    statement                      shift and go to state 15
    assignement                    shift and go to state 3
    print                          shift and go to state 4
    if                             shift and go to state 5
    loop_while                     shift and go to state 6
    array                          shift and go to state 10
    change_element_array           shift and go to state 11

state 2

    (2) statements -> statement .

    FOR             reduce using rule 2 (statements -> statement .)
    FUNCTION        reduce using rule 2 (statements -> statement .)
    NAME            reduce using rule 2 (statements -> statement .)
    PRINT           reduce using rule 2 (statements -> statement .)
    IF              reduce using rule 2 (statements -> statement .)
    WHILE           reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)
    R_BRACE         reduce using rule 2 (statements -> statement .)
    RETURN          reduce using rule 2 (statements -> statement .)


state 3

    (3) statement -> assignement .

    FOR             reduce using rule 3 (statement -> assignement .)
    FUNCTION        reduce using rule 3 (statement -> assignement .)
    NAME            reduce using rule 3 (statement -> assignement .)
    PRINT           reduce using rule 3 (statement -> assignement .)
    IF              reduce using rule 3 (statement -> assignement .)
    WHILE           reduce using rule 3 (statement -> assignement .)
    $end            reduce using rule 3 (statement -> assignement .)
    R_BRACE         reduce using rule 3 (statement -> assignement .)
    RETURN          reduce using rule 3 (statement -> assignement .)


state 4

    (4) statement -> print .

    FOR             reduce using rule 4 (statement -> print .)
    FUNCTION        reduce using rule 4 (statement -> print .)
    NAME            reduce using rule 4 (statement -> print .)
    PRINT           reduce using rule 4 (statement -> print .)
    IF              reduce using rule 4 (statement -> print .)
    WHILE           reduce using rule 4 (statement -> print .)
    $end            reduce using rule 4 (statement -> print .)
    R_BRACE         reduce using rule 4 (statement -> print .)
    RETURN          reduce using rule 4 (statement -> print .)


state 5

    (55) statement -> if .
    (56) statement -> if . elifs
    (57) statement -> if . elifs else
    (58) statement -> if . else
    (52) elifs -> . elifs elif
    (53) elifs -> . elif
    (50) else -> . ELSE L_BRACE statements R_BRACE
    (51) elif -> . ELIF L_PARENTHESIS booleans R_PARENTHESIS L_BRACE statements R_BRACE

    FOR             reduce using rule 55 (statement -> if .)
    FUNCTION        reduce using rule 55 (statement -> if .)
    NAME            reduce using rule 55 (statement -> if .)
    PRINT           reduce using rule 55 (statement -> if .)
    IF              reduce using rule 55 (statement -> if .)
    WHILE           reduce using rule 55 (statement -> if .)
    $end            reduce using rule 55 (statement -> if .)
    R_BRACE         reduce using rule 55 (statement -> if .)
    RETURN          reduce using rule 55 (statement -> if .)
    ELSE            shift and go to state 19
    ELIF            shift and go to state 20

    elifs                          shift and go to state 16
    else                           shift and go to state 17
    elif                           shift and go to state 18

state 6

    (59) statement -> loop_while .

    FOR             reduce using rule 59 (statement -> loop_while .)
    FUNCTION        reduce using rule 59 (statement -> loop_while .)
    NAME            reduce using rule 59 (statement -> loop_while .)
    PRINT           reduce using rule 59 (statement -> loop_while .)
    IF              reduce using rule 59 (statement -> loop_while .)
    WHILE           reduce using rule 59 (statement -> loop_while .)
    $end            reduce using rule 59 (statement -> loop_while .)
    R_BRACE         reduce using rule 59 (statement -> loop_while .)
    RETURN          reduce using rule 59 (statement -> loop_while .)


state 7

    (61) statement -> FOR . L_PARENTHESIS NAME EQUALS expression TO expression COMMA STEP EQUALS expression R_PARENTHESIS L_BRACE statements R_BRACE
    (62) statement -> FOR . L_PARENTHESIS NAME EQUALS expression TO expression R_PARENTHESIS L_BRACE statements R_BRACE

    L_PARENTHESIS   shift and go to state 21


state 8

    (72) statement -> NAME . L_PARENTHESIS argument_list R_PARENTHESIS SEMICOLON
    (73) statement -> NAME . L_PARENTHESIS R_PARENTHESIS SEMICOLON
    (5) assignement -> NAME . EQUALS expression_string SEMICOLON
    (6) assignement -> NAME . INCREMENT SEMICOLON
    (7) assignement -> NAME . DECREMENT SEMICOLON
    (25) array -> NAME . EQUALS L_BRACKET R_BRACKET SEMICOLON
    (26) array -> NAME . EQUALS array_content SEMICOLON
    (36) change_element_array -> NAME . array_index EQUALS element SEMICOLON
    (37) change_element_array -> NAME . array_index array_index EQUALS element SEMICOLON
    (32) array_index -> . L_BRACKET expression R_BRACKET

    L_PARENTHESIS   shift and go to state 22
    EQUALS          shift and go to state 23
    INCREMENT       shift and go to state 24
    DECREMENT       shift and go to state 25
    L_BRACKET       shift and go to state 26

    array_index                    shift and go to state 27

state 9

    (68) statement -> FUNCTION . NAME L_BRACE statements R_BRACE
    (69) statement -> FUNCTION . NAME L_BRACE statements return R_BRACE
    (70) statement -> FUNCTION . NAME LESS parameter_list GREATER L_BRACE statements R_BRACE
    (71) statement -> FUNCTION . NAME LESS parameter_list GREATER L_BRACE statements return R_BRACE

    NAME            shift and go to state 28


state 10

    (24) assignement -> array .

    FOR             reduce using rule 24 (assignement -> array .)
    FUNCTION        reduce using rule 24 (assignement -> array .)
    NAME            reduce using rule 24 (assignement -> array .)
    PRINT           reduce using rule 24 (assignement -> array .)
    IF              reduce using rule 24 (assignement -> array .)
    WHILE           reduce using rule 24 (assignement -> array .)
    $end            reduce using rule 24 (assignement -> array .)
    R_BRACE         reduce using rule 24 (assignement -> array .)
    RETURN          reduce using rule 24 (assignement -> array .)


state 11

    (35) assignement -> change_element_array .

    FOR             reduce using rule 35 (assignement -> change_element_array .)
    FUNCTION        reduce using rule 35 (assignement -> change_element_array .)
    NAME            reduce using rule 35 (assignement -> change_element_array .)
    PRINT           reduce using rule 35 (assignement -> change_element_array .)
    IF              reduce using rule 35 (assignement -> change_element_array .)
    WHILE           reduce using rule 35 (assignement -> change_element_array .)
    $end            reduce using rule 35 (assignement -> change_element_array .)
    R_BRACE         reduce using rule 35 (assignement -> change_element_array .)
    RETURN          reduce using rule 35 (assignement -> change_element_array .)


state 12

    (11) print -> PRINT . L_PARENTHESIS expression_string R_PARENTHESIS SEMICOLON

    L_PARENTHESIS   shift and go to state 29


state 13

    (54) if -> IF . L_PARENTHESIS booleans R_PARENTHESIS L_BRACE statements R_BRACE

    L_PARENTHESIS   shift and go to state 30


state 14

    (60) loop_while -> WHILE . booleans L_BRACE statements R_BRACE
    (40) booleans -> . booleans AND boolean
    (41) booleans -> . booleans OR boolean
    (42) booleans -> . boolean
    (43) booleans -> . L_PARENTHESIS booleans R_PARENTHESIS
    (38) boolean -> . TRUE
    (39) boolean -> . FALSE
    (44) boolean -> . expression_string EQUAL expression_string
    (45) boolean -> . expression_string NOT_EQUAL expression_string
    (46) boolean -> . expression_string GREATER expression_string
    (47) boolean -> . expression_string LESS expression_string
    (48) boolean -> . expression_string GREATER_EQUAL expression_string
    (49) boolean -> . expression_string LESS_EQUAL expression_string
    (8) expression_string -> . expression
    (9) expression_string -> . STRING
    (10) expression_string -> . boolean
    (33) expression_string -> . NAME array_index
    (34) expression_string -> . NAME array_index array_index
    (12) expression -> . L_PARENTHESIS expression R_PARENTHESIS
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MODULO expression
    (18) expression -> . term
    (19) term -> . factor
    (20) term -> . NAME
    (21) factor -> . NUMBER
    (23) factor -> . uminus
    (22) uminus -> . MINUS NUMBER

    L_PARENTHESIS   shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    STRING          shift and go to state 38
    NAME            shift and go to state 39
    NUMBER          shift and go to state 43
    MINUS           shift and go to state 40

    booleans                       shift and go to state 31
    boolean                        shift and go to state 32
    expression_string              shift and go to state 36
    expression                     shift and go to state 37
    term                           shift and go to state 41
    factor                         shift and go to state 42
    uminus                         shift and go to state 44

state 15

    (1) statements -> statements statement .

    FOR             reduce using rule 1 (statements -> statements statement .)
    FUNCTION        reduce using rule 1 (statements -> statements statement .)
    NAME            reduce using rule 1 (statements -> statements statement .)
    PRINT           reduce using rule 1 (statements -> statements statement .)
    IF              reduce using rule 1 (statements -> statements statement .)
    WHILE           reduce using rule 1 (statements -> statements statement .)
    $end            reduce using rule 1 (statements -> statements statement .)
    R_BRACE         reduce using rule 1 (statements -> statements statement .)
    RETURN          reduce using rule 1 (statements -> statements statement .)


state 16

    (56) statement -> if elifs .
    (57) statement -> if elifs . else
    (52) elifs -> elifs . elif
    (50) else -> . ELSE L_BRACE statements R_BRACE
    (51) elif -> . ELIF L_PARENTHESIS booleans R_PARENTHESIS L_BRACE statements R_BRACE

    FOR             reduce using rule 56 (statement -> if elifs .)
    FUNCTION        reduce using rule 56 (statement -> if elifs .)
    NAME            reduce using rule 56 (statement -> if elifs .)
    PRINT           reduce using rule 56 (statement -> if elifs .)
    IF              reduce using rule 56 (statement -> if elifs .)
    WHILE           reduce using rule 56 (statement -> if elifs .)
    $end            reduce using rule 56 (statement -> if elifs .)
    R_BRACE         reduce using rule 56 (statement -> if elifs .)
    RETURN          reduce using rule 56 (statement -> if elifs .)
    ELSE            shift and go to state 19
    ELIF            shift and go to state 20

    else                           shift and go to state 45
    elif                           shift and go to state 46

state 17

    (58) statement -> if else .

    FOR             reduce using rule 58 (statement -> if else .)
    FUNCTION        reduce using rule 58 (statement -> if else .)
    NAME            reduce using rule 58 (statement -> if else .)
    PRINT           reduce using rule 58 (statement -> if else .)
    IF              reduce using rule 58 (statement -> if else .)
    WHILE           reduce using rule 58 (statement -> if else .)
    $end            reduce using rule 58 (statement -> if else .)
    R_BRACE         reduce using rule 58 (statement -> if else .)
    RETURN          reduce using rule 58 (statement -> if else .)


state 18

    (53) elifs -> elif .

    ELSE            reduce using rule 53 (elifs -> elif .)
    ELIF            reduce using rule 53 (elifs -> elif .)
    FOR             reduce using rule 53 (elifs -> elif .)
    FUNCTION        reduce using rule 53 (elifs -> elif .)
    NAME            reduce using rule 53 (elifs -> elif .)
    PRINT           reduce using rule 53 (elifs -> elif .)
    IF              reduce using rule 53 (elifs -> elif .)
    WHILE           reduce using rule 53 (elifs -> elif .)
    $end            reduce using rule 53 (elifs -> elif .)
    R_BRACE         reduce using rule 53 (elifs -> elif .)
    RETURN          reduce using rule 53 (elifs -> elif .)


state 19

    (50) else -> ELSE . L_BRACE statements R_BRACE

    L_BRACE         shift and go to state 47


state 20

    (51) elif -> ELIF . L_PARENTHESIS booleans R_PARENTHESIS L_BRACE statements R_BRACE

    L_PARENTHESIS   shift and go to state 48


state 21

    (61) statement -> FOR L_PARENTHESIS . NAME EQUALS expression TO expression COMMA STEP EQUALS expression R_PARENTHESIS L_BRACE statements R_BRACE
    (62) statement -> FOR L_PARENTHESIS . NAME EQUALS expression TO expression R_PARENTHESIS L_BRACE statements R_BRACE

    NAME            shift and go to state 49


state 22

    (72) statement -> NAME L_PARENTHESIS . argument_list R_PARENTHESIS SEMICOLON
    (73) statement -> NAME L_PARENTHESIS . R_PARENTHESIS SEMICOLON
    (63) argument_list -> . expression
    (64) argument_list -> . argument_list COMMA expression
    (12) expression -> . L_PARENTHESIS expression R_PARENTHESIS
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MODULO expression
    (18) expression -> . term
    (19) term -> . factor
    (20) term -> . NAME
    (21) factor -> . NUMBER
    (23) factor -> . uminus
    (22) uminus -> . MINUS NUMBER

    R_PARENTHESIS   shift and go to state 53
    L_PARENTHESIS   shift and go to state 51
    NAME            shift and go to state 50
    NUMBER          shift and go to state 43
    MINUS           shift and go to state 40

    argument_list                  shift and go to state 52
    expression                     shift and go to state 54
    term                           shift and go to state 41
    factor                         shift and go to state 42
    uminus                         shift and go to state 44

state 23

    (5) assignement -> NAME EQUALS . expression_string SEMICOLON
    (25) array -> NAME EQUALS . L_BRACKET R_BRACKET SEMICOLON
    (26) array -> NAME EQUALS . array_content SEMICOLON
    (8) expression_string -> . expression
    (9) expression_string -> . STRING
    (10) expression_string -> . boolean
    (33) expression_string -> . NAME array_index
    (34) expression_string -> . NAME array_index array_index
    (27) array_content -> . L_BRACKET elements R_BRACKET
    (12) expression -> . L_PARENTHESIS expression R_PARENTHESIS
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MODULO expression
    (18) expression -> . term
    (38) boolean -> . TRUE
    (39) boolean -> . FALSE
    (44) boolean -> . expression_string EQUAL expression_string
    (45) boolean -> . expression_string NOT_EQUAL expression_string
    (46) boolean -> . expression_string GREATER expression_string
    (47) boolean -> . expression_string LESS expression_string
    (48) boolean -> . expression_string GREATER_EQUAL expression_string
    (49) boolean -> . expression_string LESS_EQUAL expression_string
    (19) term -> . factor
    (20) term -> . NAME
    (21) factor -> . NUMBER
    (23) factor -> . uminus
    (22) uminus -> . MINUS NUMBER

    L_BRACKET       shift and go to state 56
    STRING          shift and go to state 38
    NAME            shift and go to state 39
    L_PARENTHESIS   shift and go to state 51
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    NUMBER          shift and go to state 43
    MINUS           shift and go to state 40

    expression_string              shift and go to state 55
    array_content                  shift and go to state 57
    expression                     shift and go to state 37
    boolean                        shift and go to state 58
    term                           shift and go to state 41
    factor                         shift and go to state 42
    uminus                         shift and go to state 44

state 24

    (6) assignement -> NAME INCREMENT . SEMICOLON

    SEMICOLON       shift and go to state 59


state 25

    (7) assignement -> NAME DECREMENT . SEMICOLON

    SEMICOLON       shift and go to state 60


state 26

    (32) array_index -> L_BRACKET . expression R_BRACKET
    (12) expression -> . L_PARENTHESIS expression R_PARENTHESIS
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MODULO expression
    (18) expression -> . term
    (19) term -> . factor
    (20) term -> . NAME
    (21) factor -> . NUMBER
    (23) factor -> . uminus
    (22) uminus -> . MINUS NUMBER

    L_PARENTHESIS   shift and go to state 51
    NAME            shift and go to state 50
    NUMBER          shift and go to state 43
    MINUS           shift and go to state 40

    expression                     shift and go to state 61
    term                           shift and go to state 41
    factor                         shift and go to state 42
    uminus                         shift and go to state 44

state 27

    (36) change_element_array -> NAME array_index . EQUALS element SEMICOLON
    (37) change_element_array -> NAME array_index . array_index EQUALS element SEMICOLON
    (32) array_index -> . L_BRACKET expression R_BRACKET

    EQUALS          shift and go to state 63
    L_BRACKET       shift and go to state 26

    array_index                    shift and go to state 62

state 28

    (68) statement -> FUNCTION NAME . L_BRACE statements R_BRACE
    (69) statement -> FUNCTION NAME . L_BRACE statements return R_BRACE
    (70) statement -> FUNCTION NAME . LESS parameter_list GREATER L_BRACE statements R_BRACE
    (71) statement -> FUNCTION NAME . LESS parameter_list GREATER L_BRACE statements return R_BRACE

    L_BRACE         shift and go to state 64
    LESS            shift and go to state 65


state 29

    (11) print -> PRINT L_PARENTHESIS . expression_string R_PARENTHESIS SEMICOLON
    (8) expression_string -> . expression
    (9) expression_string -> . STRING
    (10) expression_string -> . boolean
    (33) expression_string -> . NAME array_index
    (34) expression_string -> . NAME array_index array_index
    (12) expression -> . L_PARENTHESIS expression R_PARENTHESIS
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MODULO expression
    (18) expression -> . term
    (38) boolean -> . TRUE
    (39) boolean -> . FALSE
    (44) boolean -> . expression_string EQUAL expression_string
    (45) boolean -> . expression_string NOT_EQUAL expression_string
    (46) boolean -> . expression_string GREATER expression_string
    (47) boolean -> . expression_string LESS expression_string
    (48) boolean -> . expression_string GREATER_EQUAL expression_string
    (49) boolean -> . expression_string LESS_EQUAL expression_string
    (19) term -> . factor
    (20) term -> . NAME
    (21) factor -> . NUMBER
    (23) factor -> . uminus
    (22) uminus -> . MINUS NUMBER

    STRING          shift and go to state 38
    NAME            shift and go to state 39
    L_PARENTHESIS   shift and go to state 51
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    NUMBER          shift and go to state 43
    MINUS           shift and go to state 40

    expression_string              shift and go to state 66
    expression                     shift and go to state 37
    boolean                        shift and go to state 58
    term                           shift and go to state 41
    factor                         shift and go to state 42
    uminus                         shift and go to state 44

state 30

    (54) if -> IF L_PARENTHESIS . booleans R_PARENTHESIS L_BRACE statements R_BRACE
    (40) booleans -> . booleans AND boolean
    (41) booleans -> . booleans OR boolean
    (42) booleans -> . boolean
    (43) booleans -> . L_PARENTHESIS booleans R_PARENTHESIS
    (38) boolean -> . TRUE
    (39) boolean -> . FALSE
    (44) boolean -> . expression_string EQUAL expression_string
    (45) boolean -> . expression_string NOT_EQUAL expression_string
    (46) boolean -> . expression_string GREATER expression_string
    (47) boolean -> . expression_string LESS expression_string
    (48) boolean -> . expression_string GREATER_EQUAL expression_string
    (49) boolean -> . expression_string LESS_EQUAL expression_string
    (8) expression_string -> . expression
    (9) expression_string -> . STRING
    (10) expression_string -> . boolean
    (33) expression_string -> . NAME array_index
    (34) expression_string -> . NAME array_index array_index
    (12) expression -> . L_PARENTHESIS expression R_PARENTHESIS
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MODULO expression
    (18) expression -> . term
    (19) term -> . factor
    (20) term -> . NAME
    (21) factor -> . NUMBER
    (23) factor -> . uminus
    (22) uminus -> . MINUS NUMBER

    L_PARENTHESIS   shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    STRING          shift and go to state 38
    NAME            shift and go to state 39
    NUMBER          shift and go to state 43
    MINUS           shift and go to state 40

    booleans                       shift and go to state 67
    boolean                        shift and go to state 32
    expression_string              shift and go to state 36
    expression                     shift and go to state 37
    term                           shift and go to state 41
    factor                         shift and go to state 42
    uminus                         shift and go to state 44

state 31

    (60) loop_while -> WHILE booleans . L_BRACE statements R_BRACE
    (40) booleans -> booleans . AND boolean
    (41) booleans -> booleans . OR boolean

    L_BRACE         shift and go to state 68
    AND             shift and go to state 69
    OR              shift and go to state 70


state 32

    (42) booleans -> boolean .
    (10) expression_string -> boolean .

    L_BRACE         reduce using rule 42 (booleans -> boolean .)
    AND             reduce using rule 42 (booleans -> boolean .)
    OR              reduce using rule 42 (booleans -> boolean .)
    R_PARENTHESIS   reduce using rule 42 (booleans -> boolean .)
    EQUAL           reduce using rule 10 (expression_string -> boolean .)
    NOT_EQUAL       reduce using rule 10 (expression_string -> boolean .)
    GREATER         reduce using rule 10 (expression_string -> boolean .)
    LESS            reduce using rule 10 (expression_string -> boolean .)
    GREATER_EQUAL   reduce using rule 10 (expression_string -> boolean .)
    LESS_EQUAL      reduce using rule 10 (expression_string -> boolean .)


state 33
